	to hgiese [Patch 767676]

2004-10-26  Andreas Kupries <andreask@activestate.com>

	* library/tm.tcl (::tcl::tm::Defaults): Added a second [file
	  dirname] around the location of the executable. This fixes [Tcl
	  SF Bug 1038705]. Instable of a bogus "foo/bin/lib" we now have
	  the correct "foo/lib" as a base path for modules.

2004-10-26  Don Porter  <dgp@users.sourceforge.net>

        * tests/subst.test (subst-12.3,4):      More tests for Bug 1036649.

        * unix/Makefile.in (install-libraries): Updated the installation
        of the http, msgcat, and tcltest packages to install as Tcl Modules
	on Unix systems.  Other platform Makefiles still need updating.
        [Patch 1054370]

	* tests/basic.test:	Added missing constraints.
	* tests/compile.test:
	* tests/fileSystem.test:

	* tests/init.test (init-2.8):	Updated to not rely on http package.

2004-10-26  Miguel Sofer <msofer@users.sf.net>

	* generic/tclInt.h:
	* generic/tclVar.c: removed more direct references to the VAR
	flags, replaced with access macros.

2004-10-26  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/expr.n: Clarified that non-num/non-bool literals require
	quoting. [Bug 1027849]. Also listed booleans as acceptable values.

2004-10-26  Kevin B. Kenny <kennykb@acm.org>

	* library/clock.tcl (FreeScan): Fixed a bug that caused relative
	days of the week in free-form [clock scan] to be evaluated in the
	wrong time zone.
	* tests/clock.test (clock-31.[456]): Made sure that there
	isn't an env(TZ) or env(TCL_TZ) lying around that will
	override the time zone that we're trying to establish with
	the simulated registry.
	Both problems reported as [Bug 1054101].
	
2004-10-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/string.n (map): Rewrote to clarify that we don't just map
	single characters. [Bug 1048005]
	* doc/info.n (procs): Clarified that the pattern argument may have
	namespace separators in it. [Bug 1047928]
