@@ -250,6 +250,14 @@ test subst-12.4 {nasty case, Bug 1036649} {
     }
     list $res $x
 } {{1 {missing close-bracket}} 10}
+test subst-12.5 {nasty case, Bug 1036649} {
+    set x 0
+    for {set i 0} {$i < 10} {incr i} {
+	set res [list [catch {subst "\[incr x"} msg] $msg]
+	if {$msg ne "missing close-bracket"} break
+    }
+    list $res $x
+} {{1 {missing close-bracket}} 0}
 
 # cleanup
 ::tcltest::cleanupTests
